# gpu-pathed

./: .gitignore  .gitmodules  CMakeLists.txt  Pipfile  README.md  app.py  camera_widget.py  color_button.py  material_widget.py  pathed.py  render_widget.py  requirements.txt  settings_widget.py
app/: gl_widget.cpp  gl_widget.h  main.cpp  main_window.cpp  main_window.h
bindings/: path_tracer_bindings.cu
gui/: app.py  material_widget.py  render_widget.py
gui/core/: coordinates.py  point.py  trackball.py  transform.py
gui/widget/: camera.py  material.py  render.py  settings.py  sidebar.py
gui/widget/material/: __init__.py  glass.py  lambertian.py  microfacet.py  mirror.py
include/: camera.h  color.h  cuda_globals.h  frame.h  framebuffer.h  hit_record.h  hit_test.h  intersection.h  macro_helper.h  material.h  path_tracer.h  primitive.h  ray.h  render_record.h  render_session.h  sampler.h  scene.h  scene_data.h  scene_model.h  sphere.h  spp_optimizer.h  surface_sample.h  tangent_frame.h  transform.h  triangle.h  util.h  vec3.h  world.h  world_frame.h
include/core/: camera.h  measure.h  ray.h  sample.h  trig.h
include/io/: image.h
include/lights/: environment_light.h  sampler.h  types.h
include/materials/: bsdf.h  bsdf_sample.h  dummy.h  glass.h  lambertian.h  material.h  material_lookup.h  material_store.h  material_table.h  microfacet.h  mirror.h  params.h  types.h
include/math/: distribution.h  mis.h  spherical_coordinates.h
include/optics/: fresnel.h  snell.h
include/parsers/: mtl_parser.h  obj_parser.h  ply_parser.h  string_util.h  types.h
include/primitives/: sphere.h  triangle.h  types.h
include/renderers/: float3_helpers.h  g_buffer.h  optix.h  optix_tracer.h  path_tracer.h  payload_helpers.h  renderer.h
optix/: optix_kernel.cu
scenes/mis/: plate1.ply  plate2.ply  plate3.ply  plate4.ply
src/: camera.cu  cuda_globals.cu  framebuffer.cu  hit_test.cu  material.cu  path_tracer.cu  primitive.cu  render_session.cu  scene.cu  scene_data.cu  scene_model.cu  sphere.cu  spp_optimizer.cpp  transform.cu  triangle.cu  world.cu
src/core/: camera.cu
src/io/: image.cpp
src/lights/: environment_light.cu
src/materials/: dummy.cu  glass.cu  lambertian.cu  material.cu  material_lookup.cu  material_store.cpp  material_table.cpp  mirror.cu
src/math/: distribution.cu  spherical_coordinates.cu
src/parsers/: mtl_parser.cpp  obj_parser.cpp  ply_parser.cpp  string_util.cpp
src/primitives/: sphere.cu  triangle.cu
src/renderers/: g_buffer.cu  optix.cpp  optix_tracer.cu  path_tracer.cu  renderer.cpp
test/: CMakeLists.txt  ply_example.ply  test_distribution.cu  test_ply_parser.cpp
tests/: test_trackball.py
